[PJ-961] - header submenu align fix

--- a/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
+++ b/app/design/frontend/peterjacksons/petertheme/web/css/layout/_header-middle.scss
@@ -63,7 +63,7 @@
                 }
             }
 
-            &.submenu {
+            > ul {
                 text-align: left;
             }
 
